--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "ngx-color-picker": "^15.0.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
